--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -109,13 +109,13 @@ Keybinds related to the delete confirmation screen
 
 Keybinds related to extra copy options
 
-| action              | default      | vim          | sane         | description                |
-| ------------------- | ------------ | ------------ | ------------ | -------------------------- |
-| open_popup          | <kbd>Y</kbd> | <kbd>Y</kbd> | <kbd>C</kbd> | Copy options               |
-| copy_to_rovr        | <kbd>y</kbd> | <kbd>y</kbd> | <kbd>y</kbd> | Copy to rovr's clipboard   |
-| copy_single_path    | <kbd>p</kbd> | <kbd>p</kbd> | <kbd>p</kbd> | Copy highlighted file path |
-| copy_to_system_clip | <kbd>s</kbd> | <kbd>s</kbd> | <kbd>s</kbd> | Copy to system clipboard   |
-| copy_parent_path    | <kbd>d</kbd> | <kbd>d</kbd> | <kbd>d</kbd> | Copy parent directory path |
+| action                 | default      | vim          | sane         | description                 |
+| ---------------------- | ------------ | ------------ | ------------ | --------------------------- |
+| open_popup             | <kbd>Y</kbd> | <kbd>Y</kbd> | <kbd>C</kbd> | Copy options                |
+| copy_to_rovr           | <kbd>y</kbd> | <kbd>y</kbd> | <kbd>r</kbd> | Copy to rovr's clipboard    |
+| copy_single_path       | <kbd>p</kbd> | <kbd>c</kbd> | <kbd>p</kbd> | Copy highlighted file path  |
+| copy_to_system_clip    | <kbd>s</kbd> | <kbd>s</kbd> | <kbd>s</kbd> | Copy to system clipboard    |
+| copy_current_directory | <kbd>d</kbd> | <kbd>d</kbd> | <kbd>u</kbd> | Copy current directory path |
 
 ### `change_sort_order`
 
@@ -124,9 +124,9 @@ Keybinds related to changing the sort order
 | action     | default      | vim          | sane         | description           |
 | ---------- | ------------ | ------------ | ------------ | --------------------- |
 | open_popup | <kbd>,</kbd> | <kbd>,</kbd> | <kbd>o</kbd> | Open sort order popup |
-| name       | <kbd>a</kbd> | <kbd>a</kbd> | <kbd>n</kbd> | Sort by name          |
+| name       | <kbd>a</kbd> | <kbd>a</kbd> | <kbd>a</kbd> | Sort by name          |
 | extension  | <kbd>e</kbd> | <kbd>e</kbd> | <kbd>e</kbd> | Sort by extension     |
-| natural    | <kbd>n</kbd> | <kbd>n</kbd> | <kbd>t</kbd> | Sort naturally        |
+| natural    | <kbd>n</kbd> | <kbd>n</kbd> | <kbd>n</kbd> | Sort naturally        |
 | size       | <kbd>s</kbd> | <kbd>s</kbd> | <kbd>s</kbd> | Sort by size          |
 | created    | <kbd>c</kbd> | <kbd>c</kbd> | <kbd>c</kbd> | Sort by created       |
 | modified   | <kbd>m</kbd> | <kbd>m</kbd> | <kbd>m</kbd> | Sort by modified      |
