--- a/docs/src/content/docs/reference/schema.mdx
+++ b/docs/src/content/docs/reference/schema.mdx
@@ -2260,13 +2260,13 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 
 **Description:** Keybinds related to extra copy options
 
-| Property                                                              | Type            | Title/Description                                      |
-| --------------------------------------------------------------------- | --------------- | ------------------------------------------------------ |
-| [open_popup](#keybinds_extra_copy_open_popup)                         | array of string | Open the menu with extra copy options.                 |
-| [copy_to_rovr](#keybinds_extra_copy_copy_to_rovr)                     | array of string | Copy the selected files to rovr's clipboard            |
-| [copy_single_path](#keybinds_extra_copy_copy_single_path)             | array of string | Copy only the highlighted file to the system clipboard |
-| [copy_to_system_clip](#keybinds_extra_copy_copy_to_system_clip)       | array of string | Copy the selected files to the system clipboard        |
-| [copy_current_directory](#keybinds_extra_copy_copy_current_directory) | array of string | Copy the current directory to the system clipboard     |
+| Property                                                              | Type            | Title/Description                                             |
+| --------------------------------------------------------------------- | --------------- | ------------------------------------------------------------- |
+| [open_popup](#keybinds_extra_copy_open_popup)                         | array of string | Open the menu with extra copy options.                        |
+| [copy_to_rovr](#keybinds_extra_copy_copy_to_rovr)                     | array of string | Copy the selected files to rovr's clipboard                   |
+| [copy_single_path](#keybinds_extra_copy_copy_single_path)             | array of string | Copy only the highlighted file's path to the system clipboard |
+| [copy_to_system_clip](#keybinds_extra_copy_copy_to_system_clip)       | array of string | Copy the selected files to the system clipboard               |
+| [copy_current_directory](#keybinds_extra_copy_copy_current_directory) | array of string | Copy the current directory's path to the system clipboard     |
 
 #### <a name="keybinds_extra_copy_open_popup"></a>7.24.1. Property `Rovr Config > keybinds > extra_copy > open_popup`
 
@@ -2334,7 +2334,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Required**   | No                    |
 | **Defined in** | #/definitions/keybind |
 
-**Description:** Copy only the highlighted file to the system clipboard
+**Description:** Copy only the highlighted file's path to the system clipboard
 
 |                      | Array restrictions |
 | -------------------- | ------------------ |
@@ -2392,7 +2392,7 @@ Refer to https://textual.textualize.io/guide/design/#additional-variables for mo
 | **Required**   | No                    |
 | **Defined in** | #/definitions/keybind |
 
-**Description:** Copy the current directory to the system clipboard
+**Description:** Copy the current directory's path to the system clipboard
 
 |                      | Array restrictions |
 | -------------------- | ------------------ |
