fix: resolve rabbit concerns

--- a/docs/src/content/docs/guides/file-operations.mdx
+++ b/docs/src/content/docs/guides/file-operations.mdx
@@ -58,6 +58,6 @@ in addition to copying to rovr's internal clipboard, you can also copy other thi
 - copy selected file(s) as objects to system clipboard: `Y` &gt; `s`
 
 keep in mind that copying files as objects may not work in all applications.
-- on windows: you need powershell 5.0
-- on macos: applescript support is required
-- on linux: xclip or wl-clip is needed
+- on Windows: you need PowerShell 5.0
+- on macOS: [clippy](https://github.com/neilberkman/clippy)
+- on Linux: [xclip](https://github.com/astrand/xclip) or [wl-clip](https://github.com/bugaevc/wl-clipboard) is needed
