fix: my spelling mistakes

--- a/docs/src/content/docs/contributing/how-to-contribute.mdx
+++ b/docs/src/content/docs/contributing/how-to-contribute.mdx
@@ -63,7 +63,7 @@ for feature requests, ensure that you have these at minimum
 
 ---
 
-by sumbitting this pull request, i agree that
+by submitting this pull request, i agree that
 
 - [ ] i have run `poe check` to check for any style issues
 - [ ] i have tested both the dev version (in venv) and the built version (uv build then install) of rovr
@@ -95,7 +95,7 @@ bugs can tend to be common, especially with a relatively new application.
 <br/>if you want to create a new bug report, ensure that one doesn't already exist in the [list of issues](https://github.com/NSPC911/rovr/issues?q=sort%3Aupdated-desc+is%3Aissue+is%3Aopen)
 <br/>if it doesn't exist, follow the format below
 ```md
-### issue descripton
+### issue description
 {describe what happened that resulted in the crash}
 
 ### how do you reproduce it?
@@ -105,7 +105,7 @@ bugs can tend to be common, especially with a relatively new application.
 {what should have been the expected results?}
 
 ### what actually happened after doing the steps?
-{show what actually happened after doing the steps. preferrably, paste the exception if the app had crashed.}
+{show what actually happened after doing the steps. preferably, paste the exception if the app had crashed.}
 
 ### how can this be fixed?
 {how do you think this bug can be fixed?}
