--- a/docs/src/content/docs/get-started/tutorial.mdx
+++ b/docs/src/content/docs/get-started/tutorial.mdx
@@ -105,9 +105,9 @@ once you have files selected, you may choose to use these operations or use the 
   <InlineSVG src="/rovr/screenshots/sidebarless.svg" alt="sidebarless" />
 - **toggle preview**: `I`
   <InlineSVG src="/rovr/screenshots/previewless.svg" alt="previewless" />
-- **toggle footer**
+- **toggle footer**: `F`
   <InlineSVG src="/rovr/screenshots/footerless.svg" alt="footerless" />
-- **toggle header**
+- **toggle header**: `M`
   <InlineSVG src="/rovr/screenshots/headerless.svg" alt="headerless" />
   <br />
   <sub>looks very similar to another file explorer...</sub>
