--- a/docs/src/content/docs/dev/overview.mdx
+++ b/docs/src/content/docs/dev/overview.mdx
@@ -29,5 +29,5 @@ I can't answer this question, but I can answer why you _shouldn't_ use rovr.
 I had quite some issues with [superfile](https://github.com/yorukot/superfile). it is an amazing project, and you should definitely go check it out.
 
 <br/>however, some issues I had was with its performance. spf does not utilize either threads nor asyncio, everything runs on a single app process, which can lead to plenty of lag when traveling.
-<br/>I wouldve loved to fix these issues, but I dont have any golang background, and I found [textual](https://github.com/Textualize/Textual) as a framework, and really wanted to put my skills to the test.
+<br/>I would've loved to fix these issues, but I don't have any golang background, and I found [textual](https://github.com/Textualize/Textual) as a framework, and really wanted to put my skills to the test.
 <br/>so I guess we are here now.
