--- a/docs/src/content/docs/features/persistent-state.mdx
+++ b/docs/src/content/docs/features/persistent-state.mdx
@@ -58,7 +58,7 @@ sort_descending = false
 - **preview_sidebar_visible**: whether the preview sidebar is visible
 - **footer_visible**: whether the footer is visible
 - **menuwrapper_visible**: whether the menu wrapper (action buttons) is visible
-- **sort_by**: the current sort criteria ("name", "size", "extension", "natural", "created", "modified", or "accessed")
+- **sort_by**: the current sort criteria ("name", "size", "extension", "natural", "created", "modified")
 - **sort_descending**: whether files are sorted in descending order
 
 ## automatic saving
