--- a/docs/src/content/docs/dev/configuration/configuration.mdx
+++ b/docs/src/content/docs/dev/configuration/configuration.mdx
@@ -80,12 +80,12 @@ For more advanced styling, refer to [`configuration/theming`](/rovr/configuratio
 
 ### pins.json
 
-this file doesn't have a schema, mainly because it is pretty simple
+this file doesn't have a formal schema, mainly because it is pretty simple
 
-the file follows a schema as such
+the file follows a structure as such
 
 <Code
-  code={`{\n  "default": [\n    ...\n    {\n      "name": "<label>",\n      "path": "<path>",\n      "icon": ["<icon>", "<color>"] # optional icon specification\n    }\n  ],\n  "pins": [\n    ...\n    {\n      "name": "<label>",\n      "path": "<path>",\n      "icon": ["<icon>", "<color>"] # optional icon specification\n    }\n  ]\n}`}
+  code={`{\n  "default": [\n    ...\n    {\n      "name": "<label>",\n      "path": "<path>",\n      "icon": ["<icon>", "<color>"] // optional icon specification\n    }\n  ],\n  "pins": [\n    ...\n    {\n      "name": "<label>",\n      "path": "<path>",\n      "icon": ["<icon>", "<color>"] // optional icon specification\n    }\n  ]\n}`}
   lang="jsonc"
   title="pins.json"
 />
