--- a/docs/src/content/docs/dev/contributing/how-to-contribute.mdx
+++ b/docs/src/content/docs/dev/contributing/how-to-contribute.mdx
@@ -112,8 +112,8 @@ bugs can tend to be common, especially with a relatively new application.
 ```
 
 #### want to fix an issue?
-yeah sure go ahead, the pr format is roughly similar to that of [feature additions](<#feature additions>), except that the pr must link to the issue it is resolving.
-<br/>the issue linking must follow [github's issue linking syntax](https://docs.github.com/en/issues/tracking-your-work-with-issues/using-issues/linking-a-pull-request-to-an-issue#linking-a-pull-request-to-an-issue-using-a-keyword).
+yeah sure go ahead, the pr format is roughly similar to that of [feature additions](<#feature-additions>), except that the pr must link to the issue it is resolving.
+<br/>the issue linking must follow [GitHub's issue linking syntax](https://docs.github.com/en/issues/tracking-your-work-with-issues/using-issues/linking-a-pull-request-to-an-issue#linking-a-pull-request-to-an-issue-using-a-keyword).
 <br/>if there aren't any existing issues to the problem you are resolving, you are required to create a new issue for it.
 
 ### feature request
