--- a/docs/src/content/docs/dev/guides/file-operations.mdx
+++ b/docs/src/content/docs/dev/guides/file-operations.mdx
@@ -22,6 +22,12 @@ import InlineSVG from "@/components/InlineSVG.astro";
 - create a compressed file: `shift+e`
 - extract a compressed file: `ctrl+e`
 
+there are additional options when creating an archive
+
+<InlineSVG src="/rovr/screenshots/archive-options.svg" alt="archive options dialog" />
+
+it lets you select the archive format and the compression level interactively.
+
 ### visual/select mode
 
 <InlineSVG src="/rovr/screenshots/select-mode.svg" alt="select/visual mode" />
