--- a/docs/src/content/docs/dev/contributing/project-structure.mdx
+++ b/docs/src/content/docs/dev/contributing/project-structure.mdx
@@ -143,6 +143,7 @@ handles the modal screens used
 <FileTree>
 - src/rovr/screens
   - __main__.py screen tester, not used at all
+  - archive_creator.py screen for creating archives
   - common_file_name_do_what.py when a conflicting file exists
   - delete_files.py when you want to delete files
   - dismissable.py dismissable modal, for notices
